# mkdocstrings-parser

./: .gitignore  Makefile  README.md  parser.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pytest.yml
mkdocstrings_parser/: __init__.py  parser.py
tests/: conftest.py  test_coreforecast.py  test_datasetsforecast.py  test_hierarchicalforecast.py  test_mlforecast.py  test_neuralforecast.py  test_statsforecast.py  test_utilsforecast.py
