[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocstrings-parser"
version = "0.0.1"
description = "A simple parser for mkdocstrings signature blocks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "griffe2md<1.3",
    "pip-licenses>=4.5.1",
    "pyyaml",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "lightgbm<4.6"
]
nixtlaverse = [
    "coreforecast@git+https://github.com/Nixtla/coreforecast.git",
    "utilsforecast@git+https://github.com/Nixtla/utilsforecast.git",
    "datasetsforecast@git+https://github.com/Nixtla/datasetsforecast.git",
    "mlforecast[dask]@git+https://github.com/Nixtla/mlforecast.git",
    "mlforecast@git+https://github.com/Nixtla/mlforecast.git",
    "hierarchicalforecast@git+https://github.com/Nixtla/hierarchicalforecast.git",
    "neuralforecast@git+https://github.com/Nixtla/neuralforecast.git",
    "statsforecast@git+https://github.com/Nixtla/statsforecast.git",
    "nixtla@git+https://github.com/Nixtla/nixtla.git"
]
optional = ["pandas"]


[tool.setuptools]
packages = ["mkdocstrings_parser"]

[tool.setuptools.package-dir]
parser = "mkdocstrings_parser"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-vv"
markers = "datasets: tests for datasetsforecast"
